# OpenFEP

./: .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-06-26-openfep-desmond-p1-scaffold.md  2026-06-26-openfep-desmond.md  2026-06-27-openfep-desmond-p2-rbfe-pipeline.md
docs/superpowers/specs/: 2026-06-25-openfep-desmond-design.md
openfep/: constants.py  mae_parser.py
openfep/lambda_scheduler/: presets.py
openfep/mapping/: base.py  kartograf_mapper.py  lomap_mapper.py  network.py
openfep/msj/: rbfe_writer.py  sea.py
openfep/prep/: rbfe_prep.py
tests/: test_constants.py  test_mae_parser.py  test_mapping.py  test_presets.py  test_rbfe_prep.py  test_rbfe_writer.py  test_sea.py  test_stages.py
tests/fixtures/: rbfe_complex.mae  two_ct.mae
